--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="text-align:center"><img src="4.20COURSE.jpg" width="1400" height="1400"></div>
+    <div style="text-align:center"><img src="Map.jpg" width="1400" height="1400"></div>
 </body>
 </html>
